@@ -12,6 +12,7 @@ v2.1.8
 ! rewrote movieposterdb::parse_list() -- so now the movie posters, logos, covers, etc. should work again
 + added imdb::orig_title() to retrieve the original movie title (if available; otherwise returns "")
 + added imdb::movie_recommendations() to retrieve the "people who liked this..." movies
+* imdb_person::spouse() was missing detail information (most likely due to site changes) -- added them back
 
 v2.1.7 (15.05.2013)
 -------------------
